stylesheets/style.css
html * {-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;}

html, body {background-color: #fff; font-family: 'Open Sans', sans-serif; font-weight: 300; color: #fff;
    font-size: 20px;}
input::-moz-focus-inner {border: 0;}
strong {font-weight: bold;}

h1 {font-size: 18px; font-weight: 300; color: #333333;font-family: 'Open Sans', sans-serif; }
h2 {font-size: 46px; font-weight: 300; line-height: 65px; margin: 0 auto; padding-bottom: 40px; padding-top: 40px;
    text-align: center;}
h3 {font-size: 20px;line-height: 37px;  font-weight: 300; margin: 0 auto; text-align: center}
h4 {font-size: 18px; color: #000;line-height: 28px; font-family: 'Open Sans', sans-serif; text-align: center;
    margin-bottom: 40px;}
p {line-height: 31px;}

h1 a {text-decoration: none; color: #333}
h1 a:hover {color: #aaa}
a {-webkit-transition: ease-out .2s; -moz-transition: ease-out .2s; -o-transition: ease-out .2s;
    transition: ease-out .2s; text-align: center; color: #b2b2b2; font-size: 14px; text-transform: uppercase;
    font-family: 'Open Sans', sans-serif; text-decoration: none;}

.header {border-bottom: 1px solid #EFEFEF}
.header-inside {margin: 0 auto; max-width: 1440px}
.header h1 {float: left; padding: 18px 20px; font-weight: 300; text-transform: uppercase; font-size: 16px;
    letter-spacing: 1px; }
.navigation {float: right; color: #333;font-size: 18px;}
.navigation a {text-decoration: none; text-align: left;}
.mobile-nav {display: none}
.mobile-nav-dropdown {display: none}

ul {text-align: left; display: inline; margin: 0; list-style: none; font-family: 'Open Sans', sans-serif;}
ul a {color: #333}

ul li {display: inline-block; position: relative; padding: 18px 20px; background: #fff; cursor: pointer; font-size: 14px;
    text-transform: uppercase;}
ul li:hover {color: #aaa;}
ul li:hover ul {display: block; opacity: 1; visibility: visible;}

ul li ul {padding: 0; position: absolute; left: 0; width: 200px; box-shadow: none; display: none; opacity: 0;
    visibility: hidden}
ul li ul li {background: #FBFBFB; display: block; color: #333; top: 18px; padding: 20px 0 18px 25px; line-height:20px;}
ul li ul li:hover {background-color: #E9E9E9}

/* define appearance of main sections on index */
.main-section {padding-top: 120px;}
.main-section a {color: #fff;  max-width: 200px;margin: 0 auto; font-weight: 500; text-decoration: none; text-align: center; text-transform: uppercase;
    font-size: 14px;font-family: 'Open Sans', sans-serif;letter-spacing: 2px;-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; padding: 18px 6px 18px 6px;
    border: 2px solid #FFFFFF;   -moz-box-shadow: 0px; -webkit-box-shadow: 0px;box-shadow:0px; opacity: 1 }
.main-section a:hover {background-color: #FFFFFF; color: #000 }
.main-content {max-width:1440px; margin:0 auto;}
.main-section h2 {max-width: 750px; padding-top: 0; padding-bottom: 40px; color: #fff }
.main-section h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
.main-section-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
.main-section-project img {float: left; width: 31.3%;}
.center-main-section {margin-left: 3%; margin-right: 3%}

.coding-project {padding-top: 60px;padding-bottom: 140px;}
.coding-project img {display: block; width: 80%; margin: 0 auto 0;}

.info-writing-header {margin: 40px 20px; text-align: left;}
.info-writing {margin-bottom: 0px;margin-left: 20px;margin-right: 20px;text-align: left;}
.info-writing-black {margin-bottom: 0px;margin-left: 20px;margin-right: 20px;text-align: left;}
.info-writing a {color: #FFFFFF;  max-width: 200px; margin: 40px auto 0px; font-weight: 500; text-decoration: none;
    text-align: center; text-transform: uppercase; font-size: 14px; font-family: 'Open Sans', sans-serif;
    letter-spacing: 2px; -webkit-border-radius: 300px; -moz-border-radius: 300px; border-radius: 300px;
    padding: 18px 6px 18px 6px; border: 2px solid #FFFFFF; -moz-box-shadow: 0px; -webkit-box-shadow: 0px;
    box-shadow:0px; opacity: 1}
.info-writing-black a {color: #000000;  max-width: 200px; margin: 40px auto 0px; font-weight: 500;
    text-decoration: none; text-align: center; text-transform: uppercase; font-size: 14px;
    font-family: 'Open Sans', sans-serif; letter-spacing: 2px; -webkit-border-radius: 300px; -moz-border-radius: 300px;
    border-radius: 300px; padding: 18px 6px 18px 6px; border: 2px solid #000000; -moz-box-shadow: 0px;
    -webkit-box-shadow: 0px;box-shadow:0px; opacity: 1 }
.info-writing a:hover {background-color: #FFFFFF; color: #000 }
.info-writing-black a:hover {background-color: #000000; color: #FFFFFF }

.cta {text-align: center; display: block;opacity: 0.7;}
.cta-black {text-align: center; display: block;opacity: 0.7; color: #000000}

.intro {padding-bottom: 30px; color: #FFF;}
.intro h2 {max-width: 600px; color: #000;}
.intro h3 {max-width: 1200px; margin-bottom: 50px; color: #000}

.section {width: 100%;  padding-bottom: 100px;padding-top: 50px;}
.section h1 {font-size: 24px;font-weight: 600;text-align: left;text-transform: uppercase;opacity: .9}
.section h2 { font-size: 20px;margin-bottom: 8px;margin-top: 12px;line-height: 24px; opacity: .9;padding: 0;
    text-align: left;}
.section a {text-align: center; font-size:14px;}
.section a:hover {opacity: .8}
.info {margin-bottom: 40px;margin-left: 60px;margin-right: auto;text-align: left;}
.main-image {margin: 0 auto; width: auto;}
.main-image-l {margin: 0 auto; width: 600px;}

/* define background colors */
.white {color: #fff;}
.lightgray { background-color: #bcbec0}
.gray { background-color: #868686}
.black { background-color: #21242B}
.black-text { color: #000000}
.brown { background-color: #26211d}
.red {background-color:#c74937}
.darkred {background-color: #933e2d}
.orange {background-color: #e26425}
.yellow {background-color: #e8a324}
.lightgreen {background-color:#21B179}
.green {background-color: #b6a77b}
.darkgreen {background-color:#005561}
.apttblue {background-color: #83d2eb}
.blue {background-color: #74a1d5}
.darkblue {background-color: #3f55a5}
.bloombergblue {background-color: #243768}

.header-design {color:#000; text-align: center;font-weight: 300; background-color: #fff }
.header-design h1 {font-size: 30px; color: #fff}
.header-design h2 {padding:0;}
.header-design h3 {padding-top: 25px; font-size: 26px}
.header-design { padding: 75px 0;  }
.header-design a {color: #067683}

#projects {max-width:1440px; margin:0 auto}
.large-project {display: block;width: 100%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.small-project {display: block;width: 50%;margin-left: auto; margin-right: auto; max-width: 1400px;}
.project-section {margin: 70px auto; max-width: 1400px;}
.project-section-gray {background-color: #a8a8a8; padding-bottom: 60px; padding-top: 60px;}
.project-section h3 {font-size: 16px; color: #000; font-family: 'Open Sans', sans-serif; text-align: center;
    text-transform: uppercase; letter-spacing: 2px;}
.project-section p {font-size: 16px; color: #000; float: right; width: 80%; line-height: 34px;}
.project-title {margin-bottom: 40px}
.project-section img {margin-bottom: 80px}

.header-writing {color:#000; text-align: center;font-weight: 300; background-color: #fff }
.header-writing h1 {font-size: 30px; color: #fff}
.header-writing h2 {padding:0;}
.header-writing h3 {padding-top: 25px; font-size: 26px}
.header-writing {padding: 75px 0;}
.header-writing a {color: #067683}

.triangle {font-size: 14px; padding-left: 5px; position: relative; opacity: 0.4; top: -1px;}

/* define appearance of project footer */
#next-project {margin-left: 60px; margin-right: 60px; margin-top: 100px; padding-bottom: 140px; text-align: center;
    font-family: 'Open Sans', sans-serif;}
#next-project h4 { margin-bottom: 30px; text-align: center; font-size: 16px;text-transform: uppercase;}
#next-project a {text-decoration: none; color: #333; line-height: 55px;}
#next-project a:hover {color: #aaa}
.active2 {color: #aaa !important;}

@media (max-width: 1400px) {
    .large-project {width: 90%}

    .project-section h3 {
        float: none;
        width: 80%;
        text-align: left;
        margin-bottom: 20px;
    }

    .project-section p {
        float: none;
        width: 80%;
        line-height: 34px;
        text-align: left;
        margin: 0 auto;
    }
}

@media (max-width: 700px) {
    h2 {font-size: 30px; line-height: 45px; padding-top: 20px; padding-bottom: 20px}
    h3 {font-size: 16px; line-height: 28px}
    .header-writing h3 {padding-top: 20px; font-size: 20px}

    .header-design {padding-left: 20px; padding-right: 20px; }
    .header-design h1 {font-size: 23px; line-height: 30px}
    .header-design h2 {font-size: 30px;line-height: 23px;margin-top: 13px;}
    .header-design h3 {font-size: 20px; padding-top: 20px; padding-bottom: 20px;}
    .info {   margin-left: 60px;margin-right: 60px;}
    .main-image {margin: 0 auto; width: 100%;}
    .main-image-l {margin: 0 auto; width: 100%;}
    .section h1 {font-size: 20px; font-weight: 500;text-align: left;text-transform: uppercase; }
    .section h2 { font-size: 15px;margin-bottom: 8px;margin-top: 12px;line-height: 24px; padding: 0;
        text-align: left;}
}

@media (max-width: 1000px) {
    .navigation ul {display: none}
    .navigation {margin-right: 20px; margin-top: 17px}
    .header {width: 100%;}
    .header h1 {margin-left: 20px}
    .mobile-nav {display: block}
    body {font-size: 16px}
    .main-section {padding-left: 20px; padding-right: 20px; padding-top: 60px}
    .coding-project img {width: 95%}

    .mobile-nav-dropdown {width: 100%; background-color: #fff;  border-top: 1px solid #e4e4e4;     position: absolute; }
    .mobile-nav-dropdown a {   float: left;width: 100%; margin-left: 20px; padding-bottom: 25px; text-decoration: none; color: #aaa}
    .mobile-nav-dropdown span {    margin-top: 25px; float: left;width: 100%; margin-left: 20px; padding-bottom: 25px; text-decoration: none; color: #333; font-weight: 500}

    .large-project {width: 90%}

    .coding h2 {max-width: 960px; padding-top: 50px}
    .designs h2 {max-width: 750px; padding-top: 50px; padding-bottom: 20px; color: #fff }
    .writing h2 {max-width: 750px; padding-top: 60px; padding-bottom: 20px; color: #fff }
}

@media only screen and (min-width:1000px) {
    .mobile-nav-dropdown {
        display: none !important
    }
}

